updated , models service and migration

--- a/InspectionApi/appsettings.json
+++ b/InspectionApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=NKOSANA-LT; Database=API; Integrated Security=SSPI;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
