changed connection string

--- a/InspectionApi/appsettings.json
+++ b/InspectionApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=NKOSANA-LT; Database=API; Integrated Security=SSPI;"
+    "DefaultConnection": "Server=NKOSANA-LT; Database=Inspection; Integrated Security=SSPI;"
   },
   "Logging": {
     "LogLevel": {
